2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* po/POTFILES.in: Update logviewer desktop file.

2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in:
	* logview/Makefile.am: Detect whether we are building on
	Solaris (Lin Ma, #338426).

2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: Re-sync with GNOME next release number.

2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* po/POTFILES.in: Update gnome-dictionary.

2006-04-27  Fabio Marzocca  <thesaltydog@gmail.com>

	* gnome-dictionary/docs/.cvsignore:
	* gnome-dictionary/docs/reference/.cvsignore:
	* gnome-dictionary/help/.cvsignore:

	Added .cvsignore

2006-04-27  Fabio Marzocca  <thesaltydog@gmail.com>

	* .cvsignore:
	* po/.cvsignore:

	Updated .cvsignore

2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: post-release bump to 2.15.1

2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in:
	* README:
	* NEWS: release 2.15.0 - "Growing Family"

2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* Makefile.am:
	* configure.in: Add baobab to the build; baobab is a disk usage
	analyser tool, written by Fabio Marzocca.

	* MAINTAINERS: Update.

	* po/POTFILES.in: Add baobab's files to the list of translatable
	files; remove the broken french.desktop.in dictionary source.

2006-04-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: Remove LINGUAS and depend on intltool 0.34.90
	for supporting the po/LINGUAS file (#337941).

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* README:
	* configure.in: post stable release bump to 2.15.0

2006-04-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: Drop the check for popt, as we use GOption
	for all the modules in gnome-utils (Closes bug #336360,
	patch by Tommi Vainikainen).

	* .cvsignore: