@@ -1,6 +1,6 @@
 GNOME Utilities - 
 =================
-Version: 2.15.0
+Version: 2.15.3
 
 Warning ! This is an unstable version.
 
