@@ -37,7 +37,7 @@ AC_PATH_XTRA
 #   change to C+1:0:0
 # - If the interface is the same as the previous version, change to C:R+1:A
 
-LIBGDICT_LT_VERSION=3:0:0
+LIBGDICT_LT_VERSION=4:0:0
 AC_SUBST(LIBGDICT_LT_VERSION)
 
 dnl *****************************************
