@@ -29,7 +29,7 @@
 	<oaf_attribute name="bugzilla:bugzilla" type="string" value="GNOME"/>
 	<oaf_attribute name="bugzilla:product" type="string" value="gnome-utils"/>
 	<oaf_attribute name="bugzilla:component" type="string" value="gdict-applet"/>
-	<oaf_attribute name="bugzilla:version" type="string" value"@VERSION@"/>
+	<oaf_attribute name="bugzilla:version" type="string" value="@VERSION@"/>
 	<oaf_attribute name="bugzilla:other_binaries" type="string" value="gnome-dictionary-applet"/>
 
   </oaf_server>
