@@ -5,14 +5,12 @@ Baobab
 
     * Add a new item in the list window context menu to start
       scanning a folder.
-    * Bug fixing
 
 Dictionary
 
     * Re-implement the speller widget, to show similar words in
       case no definition was found.
     * Use a themable icon
-    * Bug fixing
 
 Floppy
 
