@@ -1,3 +1,7 @@
+2006-06-12  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* README, NEWS, configure.in: Release 2.15.3
+
 2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* po/POTFILES.in: Update logviewer desktop file.
